# PyDesktopClock

./: LICENSE  README.md  pyproject.toml  setup.cfg  test.py
src/PyDesktopClock/: DesktopClock.py  main.py
src/PyDesktopClock.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
