[metadata]
name = example-pkg-S3R43o3
version = 0.0.1
author = S3R43o3
author_email = Seraphinus619@gmail.com
description = A Windows desktop widget to display time.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls = 
    Bug Tracker =

classifiers = 
    Progamming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.fing]
where = src