[metadata]
name = PyDesktopClock
version = 0.0.4
author = S3R43o3
author_email = Seraphinus619@gmail.com
description = A Windows desktop widget to display time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sera619/PyDesktopClock
project_urls = 
    Bug Tracker = https://github.com/sera619/PyDesktopClock/issues
classifiers = 
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src